# wiki

./: README.md  cheatsheet.md  getting_involved_with_hcrlab.md  getting_started_in_hcrlab.md  kinect_calibration.md  leg_detector.md  pr2_hydro.md  webcam_and_ar_markers.md
academia/: README.md  data_tools.md  generals.md  papers.md  posters.md  reviews.md
code_samples/: rospy_keyboard_teleop.md
cuda/: README.md
demos/: README.md
development_environment_setup/: README.md  auto_code_formatting.md  c1_example_bashrc.md  cosmetics.md  mac_setup.md  pr2.md  qt_creator.md  recommended_bashrc.md  remote_gazebo.md  ssh.md  tmux.md  vim.md  virtual_machine.md
development_environment_setup/installing_ros/: README.md  install_fetch_indigo.sh  install_groovy_all.sh  install_pr2_groovy.sh  install_pr2_indigo.sh  install_ros_groovy.sh  install_ros_hydro.sh  install_ros_indigo.sh  install_utils.sh
fetch/: README.md  using_non_fetch_packages.md
gazebo/: README.md  troubleshooting_gazebo.md
geometry/: README.md
installing_ros/: install_hydro_all.sh  install_pr2_hydro.sh  install_turtle.sh
kinect/: README.md  kinect_audio.md  launch.md  using_openni.md
kinect/calibration/: README.md  how_to_calibrate.md
kinect/calibration/A00364A01940048A/: README.md  depth_A00364A01940048A.yaml  kinect_nodes_A00364A01940048A.launch
kinect/calibration/B00366627745048B/: depth_B00366627745048B.yaml  kinect_nodes_B00366627745048B.launch  rgb_B00366627745048B.yaml
kinect_calibration/A00364A01940048A/: kinect_nodes_A00364A01940048A.launch  rgb_A00364A01940048A.yaml
kinect_calibration/B00366627745048B/: kinect_nodes_B00366627745048B.launch
kubi/: README.md
mongodb/: README.md
opencv/: README.md  using_opencv3_with_ros_indigo_or_jade.md
pandoc_examples/: Makefile  README.md  jcsl.csl  output_basic.html  output_ieee.html  output_ieee.md  output_ieee_strict.md  output_ieee_strict_nocite.md  output_ieee_strict_smart.md  output_jcsl.html  research.bib  test.tex  test_nocite.tex
pbd/: README.md
pcl/: README.md  pcl_cpp_tips.md
pcl_sample/: CMakeLists.txt  README.md  package.xml
pcl_sample/include/pcl_sample/: processor.h
pcl_sample/scripts/: pyprocessor_node.py
pcl_sample/src/: processor.cpp  processor_node.cpp
point_cloud/: skeleton_tracking.md
pr2/: README.md  accessing_servers.md  backpack_configuration.md  calibration.md  motorconf.md  network_setup.md  pr2_hydro.md  pr2_indigo.md  replacing_batteries.md  robot_command.md  sound.md  switching_between_groovy_and_hydro.md  switching_robot_to_groovy.md  troubleshooting.md  usage_guide.md  wireless_problems.md
software_engineering/: README.md  code_coverage.md  continuous_integration.md  git.md  hydro_migration.md  managing_workspace.md  python_modules.md  ros_logging.md  unit_testing.md
tf/: README.md
turtlebot/: README.md  adding_hokuyo_laser.md
tutorial_code/: driver.py  simple_driver_tutorial.md
voice_recognition/: README.md
web_development/: README.md  installing_node.md  serving_urdf.md
